<resources>

    <string name="app_name">Selah Devotionals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Selah Devotionals</string>
    <string name="nav_header_subtitle">dev.jhesed@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Main Menu -->
    <string name="menu_random_bible_verse">Random Bible Verse</string>
    <string name="menu_prayer_journal">Prayer Journal</string>
    <string name="menu_devotionals">Devotionals</string>

    <!-- Sub Menus -->
    <string name="menu_selah_random">Random</string>
    <string name="menu_selah_share">Share</string>

    <!-- Release1 PJ Menus -->
    <string name="menu_pj_prayer_items">Prayer Items</string>
    <string name="menu_pj_tutorial">Tutorial</string>

    <!-- Future PJ Menus -->
    <string name="menu_pj_personal">Personal</string>
    <string name="menu_pj_family">Family</string>
    <string name="menu_pj_church">Church</string>
    <string name="menu_pj_community">Community</string>

    <!-- Buttons -->
    <string name="btn_random">Randomize</string>

    <!-- Tutorials -->
    <string name="tutorial_title">How to Use</string>
    <string name="help_pending">Pending</string>
    <string name="help_done">Done</string>
    <string name="help_answered">Answered</string>
    <string name="help_others">Others</string>

    <string name="text_pending">
-	Contains prayer items that have not yet been prayed for today.\n
-	Upon clicking the prayer item, it will automatically be moved to “Done”\n
-	Items in “Done” will be moved back to “Pending” after 24 hours (from when it was moved from "Pending" to "Done")
    </string>

    <string name="text_done">
-	Contains prayer items that were already prayed for the day\n
-	Items in “Done” will be moved back to “Pending” after 24 hours (from when it was moved from "Pending" to "Done")
    </string>

    <string name="text_answered">
-	Contains prayer items that have been answered already.\n
-	To do this, press the prayer item and click the edit button (pencil icon).  Click “Yes” in the “Answered” section
    </string>

    <string name="text_others">
-	Prayer items can be deleted by long pressing the prayer item, and pressing "Confirm" in the pop-up dialog
    </string>
    <string name="add_details_about_your_prayer">Add details about your Prayer:</string>
    <string name="title">Title:</string>
    <string name="edit_prayer_request">Edit Prayer Request</string>

    <string name="title_about">About</string>
    <string name="about1">Selah Devotionals\' Vision is to make Gospel and Christian Resources
    more accessible to people. This is not intended to replace your favorite devotional app,
    but rather compliment them. It has 7 Sections.</string>
    <string name="about2">Section 1: Random Bible Verse. This is useful when you want to
    simply refresh yourself with inspiring Bible Verses, or you want to share a Scripture
    snippet to someone else.</string>
    <string name="about3">Section 2: Online Services. This compiles preaching resources
    from different Churches. I am so blessed with these Churches and I always listen to
    these Podcasts. Churches included are JSOS, Elevation, Transformation, Passion,
    and Victory. I pray that God will use these messages to empower you too</string>
    <string name="about4">Section 3: Prayer Journal. You can create, edit and delete custom
    Prayer Items.</string>
    <string name="about5">Section 4: Devotionals. This compiles resources from
    free devotional RSS feeds. Word Points, Devotional Treasure, Our Daily Bread,
    The Good News Herald, and Everyday with God are the RSS feeds included.</string>
    <string name="about6">Section 5: News. This compiles resources from free news
    RSS feeds. Included items are Christian News Journal, Answers in Genesis, Voice of Martyrs,
    Christian Headlines, and Bible Gateway.</string>
    <string name="about7">Section 6: Christian Music. Contains songs from different Christian
        bands. JSOS, Elevation, Hillsong, Passion, and Victory Worship are the included bands.</string>
    <string name="about8">Section 7: Bible, Science, End Times. Contains compilation of
        youtube videos from Answers in Genesis and Kent Hovind tackling Science and the Bible,
        and the End Times.</string>
    <string name="about9">The resources used here are free. Hence, I should not be violating
    laws. However, if you\'re one of the authors of the resources used in this app, and you\'re
    not comfortable with it, please contact me. I\'ll be happy to comply with whatever we discuss.
    </string>
    <string name="about10">The application itself doesn\'t have ads. If you see ad from any page,
        those ads are owned by the resources used. All income will be credited to them.
        Let\'s support them.
    </string>
    <string name="about11">This app is still in early stage, and I\'m doing it in my free time.
        Please be patient with me for any bug. Please file them, and I\'ll try to fix
        as soon as I can. If you\'re a developer, you can issue PR(s) to improve the codebase,
        or add new features. You may contact me for source code. Also, Youtube has a threshold
        for maximum API calls we can do. If ever the sections with Youtube suddenly didn\'t
        work, we might have reached the limit already. Please come back after another day,
        and the limit should have reset. Please bare with me. Hehehehe.
    </string>
    <string name="about12">Future plan (very long term): Add Praise and Prayer Walls.
        Add social network where we can chat each other for counseling and prayer.
    </string>
    <string name="developer_label">Developer:</string>
    <string name="donate_btc_label">Donate BTC:</string>
    <string name="developer_email_value">dev.jhesed@gmail.com</string>
    <string name="donate_btc_value">3DK8NFyGUJorowYDxcgkCp22hmKdEfnyS6</string>4
    <string name="developers">dev.jhesed@gmail.com</string>

    <!-- RSS Feeds -->
    <string name="alert_title">Attention!</string>
    <string name="alert_message">Unable to load data. \nCheck your connection!</string>
    <string name="alert_positive">Close</string>
    <string name="video">Video</string>
    <string name="rss_feeds">RSS Feeds</string>
    <string name="news">News</string>
    <string name="devotionals">Devotionals</string>
    <string name="about">About</string>
    <string name="word_points">Word Points</string>
    <string name="bible_gateway">Bible Gateway</string>
    <string name="devotional_treasure">Devotional Treasure</string>
    <string name="everyday_with_god">Everyday With God</string>
    <string name="the_good_news_herald">The Good New Herald</string>
    <string name="our_daily_bread">Our Daily Bread</string>
    <string name="christian_news_journal">Christian News Journal</string>
    <string name="answers_in_genesis">Answers In Genesis</string>
    <string name="christian_headlines">Christian Headlines</string>
    <string name="voice_of_martyrs">Voice of Martyrs</string>
    <string name="online_service">Online Services</string>
    <string name="jsos">JSOS</string>
    <string name="victory">Victory</string>
    <string name="elevation">Elevation</string>0
    <string name="transformation">Transformation</string>
    <string name="passion">Passion</string>
    <string name="check_network">Please check your internet connection.</string>
    <string name="songs">Christian Songs</string>
    <string name="hillsong">Hillsong</string>
    <string name="christian_music">Christian Music</string>
    <string name="answers_in_genesis_ark_encounter">Ark Encounter</string>
    <string name="answers_in_genesis_animal_encounter">Animal Encounter</string>
    <string name="answers_in_genesis_news">News</string>
    <string name="kent_hovind_debates">Debates</string>
    <string name="kent_hovind_debates_end_times">End Times</string>
    <string name="bible_science_end_times">Bible, Science, End Times</string>
    <string name="jhesed">Jhesed</string>

    <!-- CDHD -->

    <string name="latest">Latest</string>
    <string name="recent">This Month</string>
    <string name="cdhd">CDHD</string>
    <string name="world_history_label">World History</string>
    <string name="bible_verse_label">Bible Verse</string>
    <string name="philippine_history_label">Philippine History</string>
    <string name="prayer_focus_label">Prayer Focus</string>
    <string name="connection_error">No data available yet. Be a volunteer.</string>
</resources>