<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sub_nav_devotional1"
        android:icon="@drawable/ic_devotionals_wp"
        android:title="@string/word_points" />
    <item
        android:id="@+id/sub_nav_devotional2"
        android:icon="@drawable/ic_devotionals_dt"
        android:title="@string/devotional_treasure" />
    <item
        android:id="@+id/sub_nav_devotional3"
        android:icon="@drawable/ic_devotionals_ewg"
        android:title="@string/everyday_with_god" />
    <item
        android:id="@+id/sub_nav_devotional4"
        android:icon="@drawable/ic_devotionals_bg"
        android:title="@string/bible_gateway" />

    <item
        android:id="@+id/sub_nav_devotional5"
        android:icon="@drawable/ic_devotionals_gh"
        android:title="@string/the_good_news_herald" />
</menu>