<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.jhesed.rbv.ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- DESCRIPTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about7"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about8"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about9"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about11"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about12"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="10dp"
                android:text="@string/jhesed"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextEmphasis"
                android:textStyle="italic" />
        </LinearLayout>

        <!--DIVIDER-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <!-- INFO -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <!--TITLES-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorTextEmphasis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donate_btc_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorTextEmphasis" />

            </LinearLayout>

            <!--DYNAMIC VALUES-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developers"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donate_btc_value"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
        </LinearLayout>

        <!--END INFO-->

    </LinearLayout>

</ScrollView>