<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_random_bible_verse"
            android:icon="@drawable/ic_menu_random_bible_verse"
            android:title="@string/menu_random_bible_verse" />
        <item
            android:id="@+id/nav_prayer_journal"
            android:icon="@drawable/ic_menu_prayer_journal"
            android:title="@string/menu_prayer_journal" />
        <item
            android:id="@+id/nav_devotionals"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/title_about" />
    </group>
</menu>